--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fed136
-  secondary: fec503   
+  primary: b4100a # RGB: 180 16 10
+  secondary: e0140d # RGB: 224 20 13
   secondary-dark: 333
   muted: 777
 
